--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: "Send Email: Deployment Started"
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.mail.us-west-2.awsapps.com
+          server_address: smtp.mail.us-east-1.awsapps.com
           server_port: 465
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASSWORD }}
